<resources>
    <string name="app_name">EPCH India</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">Back</string>
    <string name="filterItem">Filter Item&#8230;</string>
    <string name="enter_exbi_name">Search&#8230;</string>
    <string name="enter_product_name">Enter Product Name&#8230;</string>
    <string name="enter_hall_no">Enter Hall No&#8230;</string>
     <string name="day1">16-Apr-16</string>
     <string name="day2">17-Apr-16</string>
     <string name="day3">18-Apr-16</string>
    <string-array name="howtoreach">
        <item>Parking area</item>
        <item>Registration area</item>
        
    </string-array>
    <string-array name="About1">
        <item>Exhibitors</item>
        <item>Conclave</item>
        <item>Venue Map</item>
        <item>Nearby Places</item>
        <item>Facilities</item>AboutAbout
        <item>Social Networking</item>    
    </string-array>
     <string name="pack_plus_2015">PackPlus 2015</string>
    <string-array name="panel_item">
        <item>About</item>
        <item>\tPackPlus</item>
        <item>\tPrint - Packaging.com</item>
        <item>\tDisclaimer</item>
        <item>PackPlus 2014</item>
        <item>\tExhibitors</item>
        <item>\tConclave</item>
        <item>\tVenue Map</item>
        <item>\tNearby Places</item>
        <item>\tFacilities</item>
        <item>\tSocial Network</item>
        <item>PackPlus 2015</item>
        <item>\tSpace Application</item>
        <item>\tFloor Plan</item> 
        <item>\tPromotion Plan</item>
        <item>Past Events</item>
        <item>\tPackPlus 2013 Report</item>
        <item>\tImages</item>
        <item>\tVideos</item>   
    </string-array>
    <string-array name="promotion_option">
        <item>Sponsor</item>
        <item>Catalogue</item>
        <item>E-newsletter</item>
        <item>Mobile App</item>
    </string-array>
    <string-array name="prefered_stall_option">
        <item>Shell</item>
        <item>Bare</item>
        
    </string-array>
     <string name="search">Search</string>
     <string name="home">Home</string>
     <string name="about">About</string>
     <string name="packPlus">PackPlus</string>
     <string name="print">Print &amp; Packaging.com</string>
     <string name="pack_plus_2014">PackPlus 2014</string>
     <string name="Exhibitors">Exhibitors</string>
     <string name="Conclave">Conclave</string>
     <string name="VenueMap">Venue Map</string>
     <string name="NearByPlaces">Nearby Places</string>
     <string name="Facilities">Facilities</string>
     <string name="SocialNetworking">Social Networking</string>
      <string name="user_registration">User Registration</string>
      <string name="exhibition_date">Exhibition Dates\n10 June 2015 - 13 June 2015</string>
       <string name="Venue"> Venue\nPragati Maidan</string>
        <string name="Space_Rate">Exhibition Space Rate ( per sq. m.)</string>
        <string name="Shell">Shell Scheme\n(Min. 7.5 sq. m.)\nRs. 11,500/-</string>
        <string name="Space_only">Space only\n(Min. 30 sq. m.)\n Rs. 10,500/-</string>
          <string name="Tax">Service Tax as applicable is extra.\n(Presently 12.36%)</string>
           <string name="camera_or">Photo
( Select Image from SD
Card or Shoot from
Camera )</string>
  <string name="gallery">Gallery</string>
  <string name="camera">Camera</string>
   <string name="ok">OK</string>
   <string name="cancel">Try Again</string>
  <string name="promotion">We wish to Promote my company /product in PackPlus 2015 .</string>
  <string name="space_application">We wish to exhibit in PackPlus 2015.</string>
  <string name="conclave_header_first">Harmonising Packaging Design, Productivity &amp; Secondary Packaging
for Better Business Processes
</string>
<string name="conclave_header_second">Leveraging Supply Chain Efficiency Cost Effectively to Improve Sales &amp; Profitability</string>
  <string name="day_first">11-Jun-14</string>
  <string name="day_second">12-Jun-14</string>
  <string-array name="assistance_child"> 
        <item>How to Reach NDWBF?</item>
        <item>Nearby Places</item>
    </string-array>
    <string-array name="media_child"> 
        <item>Share to Facebook</item>
        <item>Like us on Facebook</item>
         <item>Share Contact (My QR Code)</item>
    </string-array>
    <string-array name="googleMapItems">
        <item>ATM</item>
        <item>Hospitals</item>
        <item>Restaurant</item>
        <item>Attractions</item>
        <item>Police</item>  
        <item>Currency Exchange</item> 
    </string-array>
    <string name="product">Products</string>
    <string name="exhibitor">Exhibitors</string>
    <string name="exhibitordetails">Exhibitor Details</string>
    <string name="exhibitorname">Exhibitor Name</string>
    <string name="location">Location</string>
    <string name="Products">Products</string>
    <string name="searched_by">Search By</string>
    <string name="search_by_exhibitor_name">Exhibitor Name</string>
    <string name="hall_wise">Hall Number</string>
    <string name="language_wise">Language Wise</string>
    <string name="search_by_product_name">Product Name</string>
    <string name="event_name">Event Name</string>
    <string name="hall_name">Hall No.</string>
    <string name="search_button">Set Reminder</string>
    <string name="foundexhibitors">Found Exhibitors</string>
    <string name="myvisit">My Visit</string>
    <string name="first_day_add">Add</string>
    <string name="second_day">Second Day</string>
<string name="third_day">Third Day</string>
<string name="fourth_day">Fourth Day</string>
    <string name="first_day_event">International Packaging Conclave 2014</string>
    <string name="second_day_event">Supply Chain Conclave 2014</string>
    <string name="capture_name">QR Code Capture</string>
  <string name="encoder_name">QR Code Encoder</string>
  <string name="decoder_name">QR Code Decoder</string>
  <string name="contents_contact">Contact info</string>
  <string name="contents_email">Email address</string>
  <string name="contents_location">Geographic coordinates</string>
  <string name="contents_phone">Phone number</string>
  <string name="contents_sms">SMS address</string>
  <string name="contents_text">Plain text</string>
  <string name="msg_default_contents">Contents</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadata</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">Place a QR code inside the viewfinder rectangle to scan it.</string>
  <string name="msg_default_time">Time</string>
  <string name="msg_default_type">Type</string>
  <string name="result_address_book">Found contact info</string>
  <string name="result_calendar">Found calendar event</string>
  <string name="result_email_address">Found email address</string>
  <string name="result_geo">Found geographic coordinates</string>
  <string name="result_isbn">Found book</string>
  <string name="result_product">Found product</string>
  <string name="result_sms">Found SMS address</string>
  <string name="result_tel">Found phone number</string>
  <string name="result_text">Found plain text</string>
  <string name="result_uri">Found URL</string>
  <string name="result_wifi">Found WLAN Configuration</string>
  <string name="wifi_changing_network">Changing Network</string>
  <string name="wifi_ssid_label">Network Name</string>
  <string name="wifi_type_label">Type</string>
  <string name="barcode_image">Barcode Image</string>
   <string name="send_to">Share With...</string>
   <string name="search_with">Search With...</string>
   <string name="app_id">800203479992226</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="share">Share</string>
    <string name="book_game_of_thrones">A Game of Thrones</string>
    <string name="progress_dialog_text">Sharing photo, please wait.</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="title_activity_main1">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">
        Invalid latitude(s). Must be in the range -90 to 90 degrees
    </string>
    <string name="geofence_input_error_longitude_invalid">
        Invalid longitude(s). Must be in the range -180 to 180 degrees
    </string>
    <string name="geofence_input_error_radius_invalid">
        Invalid radius(s). Must be 1 meter or greater.
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s geofence(s) %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
     <string name="name">Name *</string>
     <string name="company_name">Company *</string>
     <string name="address">Address *</string>
     <string name="website">Website</string>
     <string name="contact1">Contact No *</string>
     <string name="contact2">Mobile No</string>
     <string name="designation">Designation</string>
     <string name="email">E-mail*</string>
</resources>