<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
  <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/Dark_Gray"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="text"
        android:textColor="@color/Dark_Gray">
            
    </EditText>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/designation"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Dark_Gray" />

    <EditText
        android:id="@+id/designation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:textColor="@color/Dark_Gray">
            
    </EditText>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/Dark_Gray"/>

    <EditText
        android:id="@+id/companyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:textColor="@color/Dark_Gray">
            
    </EditText>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/Dark_Gray"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="textMultiLine"
        android:textColor="@color/Dark_Gray">
            
    </EditText>
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact1"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/Dark_Gray"/>

    <EditText
        android:id="@+id/contact1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="number"
        android:textColor="@color/Dark_Gray">
            
    </EditText>
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact2"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/Dark_Gray"/>

    <EditText
        android:id="@+id/contact2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="number"
        android:textColor="@color/Dark_Gray">
            
    </EditText>
    
    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/Dark_Gray"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="textEmailAddress"
        android:textColor="@color/Dark_Gray">
            
    </EditText>
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/Dark_Gray"/>

    <EditText
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="textWebEditText"
        android:textColor="@color/Dark_Gray">
            
    </EditText>
    <Button android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Generate QR Code"
        android:id="@+id/converToQrCode"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/list_item_text_color"
        />
    

</LinearLayout>
</ScrollView>
